--- a/style.css
+++ b/style.css
@@ -101,7 +101,11 @@ color: #854632;
 hr {
 border: 1px solid #e3ddd7;
 margin-block: 32px;
-
-
-
 }
+
+
+.modo li::marker {
+color: #854632;
+font-weight: 700;
+}
+
