--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ box-sizing: border-box;
 }
 
 body{
-
 background-color: #f3e5d7;
 
 }
@@ -48,14 +47,14 @@ line-height: 150%;
 margin-bottom: 32px;
 }
 
-.tempo {
+.Tempo {
 background-color: #fff7fb;
 padding: 28px;
 border-radius: 12px;
 margin-bottom: 32px;
 }
 
-.tempo h2 {
+.Tempo h2 {
 font-size: 20px;
 font-weight: 600;
 line-height: 100%;
@@ -80,7 +79,7 @@ ol, ul {
 margin-left: 20px;
 }
 
-.tempo li::marker {
+.Tempo li::marker {
 color: #7a284e;
 font-size: 12px;
 }
@@ -93,7 +92,7 @@ line-height: 100%;
 margin-bottom: 24px;
 }
 
-.ingredientes li::marker {
+.Ingredientes li::marker {
 font-size: 12px;
 color: #854632;
 }
@@ -104,12 +103,12 @@ margin-block: 32px;
 }
 
 
-.modo li::marker {
+.Modo li::marker {
 color: #854632;
 font-weight: 700;
 }
 
-.informacoes p {
+.Informacoes p {
 margin-bottom: 24px;
 }
 
@@ -169,7 +168,7 @@ padding-bottom: 12px;
 
 tr:nth-of-type(4) th,
 tr:nth-of-type(4) td {
-padding-bottom: 12px;
+border: none;
 
 }
 
